force-app/main/default/objects/Candidate__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Candidate&#39;s First Name</description>
    <label>FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>