force-app/main/default/objects/Candidate__c/fields/IsDisqualified__c.field-meta.xml
<CustomField>
    <fullName>IsDisqualified__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &quot;Disqualified&quot;) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDisqualified</label>
    <type>Checkbox</type>
</CustomField>