force-app/main/default/objects/Candidate__c/fields/IsHired__c.field-meta.xml
<CustomField>
    <fullName>IsHired__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Hired&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsHired</label>
    <type>Checkbox</type>
</CustomField>