force-app/main/default/objects/Candidate__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kyiv</fullName>
            </value>
            <value>
                <fullName>Kharkiv</fullName>
            </value>
            <value>
                <fullName>Lviv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>