force-app/main/default/objects/Candidate__c/fields/Number_of_assigned_Vacancies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_assigned_Vacancies__c</fullName>
    <label>Number of assigned Vacancies</label>
    <summaryForeignKey>VacancyCandidateAssociation__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>