force-app/main/default/objects/Candidate__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recruiter responsible for this candidate (Only Recruiter role)</description>
    <label>Recruiter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Recruiter</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>