force-app/main/default/objects/Candidate__c/fields/Vacancies__c.field-meta.xml
<CustomField>
    <fullName>Vacancies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lists all open vacancies 
where the candidate is proposed</description>
    <label>Vacancies</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vacancy__c.Status__c</field>
            <operation>contains</operation>
            <value>In-Process</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Vacancy__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>