force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Email__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <columns>Recruiter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>