force-app/main/default/objects/Candidate__c/listViews/My_Candidates.listView-meta.xml
<ListView>
    <fullName>My_Candidates</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Candidates</label>
</ListView>