force-app/main/default/objects/Candidate__c/listViews/Not_validated_by_HR.listView-meta.xml
<ListView>
    <fullName>Not_validated_by_HR</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Email__c</columns>
    <columns>Location__c</columns>
    <columns>Comments__c</columns>
    <columns>Salary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Need to be validated</label>
    <sharedTo>
        <role>Recruiter_Manager</role>
    </sharedTo>
</ListView>